2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php
	  operation/events/events_list.php: Show all groups in
	event view.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php
	  operation/events/events_list.php: Addes criticity info
	in event view.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php: Added file.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb_data.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql: Added fields to display the event view.

	* godmode/menu.php
	  include/functions_config.php
	  operation/events/events_list.php: Configure the fields to be
	displayed in the event view.

	* godmode/events/custom_events.php: Added file.

2012-02-06  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from 4.0. Add a missing
	description of get_alert_template() in its leading comment.

2012-02-03  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandoradb.sql, extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql: change the
	size of the field "post_process" in the tables "tagente_modulo" and
	"tnetwork_component".
	
	Fixes: #3483814 

2012-02-03  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql: Added a default special_days value
	  to alert templates.

	* pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql,
	  godmode/agentes/module_manager_editor_common.php,
	  godmode/agentes/configurar_agente.php,
	  godmode/agentes/module_manager_editor.php: Added suport for ff
	  interval.

2012-02-03 Dario Rodriguez <dario.rodriguez@artica.es>

        * general/main_menu.php: Fixed godmode menu header visualization.

2012-02-03  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_snmp_alert_custom.php: Changed title.

2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
