@@ -107,7 +107,6 @@ references tplanned_downtime (id);
 -- -----------------------------------------------------
 
 alter table tevento add (source VARCHAR2(100) default '' NOT NULL);
-alter table tevento add (unique_id VARCHAR2(100) default '' NOT NULL);
 alter table tevento add (id_extra VARCHAR2(100) default '' NOT NULL);
 
 -- -----------------------------------------------------
