@@ -512,7 +512,6 @@ CREATE TABLE tevento (
 	user_comment CLOB,
 	tags CLOB,
 	source VARCHAR2(100) default '' NOT NULL,
-	unique_id VARCHAR2(100) default '' NOT NULL,
 	id_extra VARCHAR2(100) default '' NOT NULL,
 	CONSTRAINT tevento_event_type_cons CHECK (event_type IN ('unknown','alert_fired','alert_recovered','alert_ceased','alert_manual_validation','recon_host_detected','system','error','new_agent','going_up_warning','going_up_critical','going_down_warning','going_down_normal','going_down_critical','going_up_normal', 'configuration_change'))
 );
