@@ -1,4 +1,13 @@
 2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
+	* pandoradb.sql
+	  pandoradb.postgreSQL.sql
+	  pandoradb.oracle.sql
+	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
+	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
+	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Removed field
+	unique_id to tevento table.
+
+2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
 	* godmode/events/custom_events.php
 	  operation/events/events_list.php: Show all groups in
 	event view.
